syntax = "proto3";

package blockchain.message;

import "../../../blockchain/db-context/models/block.proto";
import "../../../blockchain/db-context/models/transaction.proto";

message BlockValidate {
    int32 index = 0;
    string publicKey = 1;
    string hash = 2;
    string sign = 3;
}

enum MessageType {
    BLOCK = 0;
    TRANSACTION = 1;
    CHAIN = 2;
    REQUEST_CHAIN = 3;
    HEAD_BLOCK_INDEX = 4;
    BLOCK_VALIDATE = 5;
}

message MessageChain {
    MessageType type = 1;
    string sender=2;
    oneof value {
        blockchain.block.Block block = 3;
        blockchain.transaction.Transaction transaction = 4;
        blockchain.block.Block chain = 5;
        string request = 6;
        string headHash = 7;
        BlockValidate block_validate = 8;
    }
}
