syntax = "proto3";

import "../../../blockchain/db-context/models/block.proto";
import "../../../blockchain/db-context/models/transaction.proto";
import "../../../blockchain/db-context/models/smart_contract.proto";
import "../../../blockchain/db-context/models/contract_transaction.proto";

enum MessageType {
    BLOCK = 0;
    TRANSACTION = 1;
    SMART_CONTRACT = 2;
    CONTRACT_TRANSACTION = 3;
}

message MessageChain {
    MessageType type = 1; // Тип сообщения
    oneof value {
        Block block = 2;
        Transaction transaction = 3;
        SmartContract smart_contract = 4;
        ContractTransaction contract_transaction = 5;
    }
}